# blog-dockerize-python-cli-tool

./: .gitignore  README.md  nornir_config.yml  pyproject.toml  run-in-docker.sh
docker/: Dockerfile  docker-entrypoint.sh
inventory/: hosts.yml
src/nornir_example/: __init__.py  cli.py  functions.py
templates/: config.j2
