[tool.poetry]
name = "nornir-example"
version = "0.1.0"
description = "A simple nornir example"
authors = ["Dmitry Teslya <dmitry.teslya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nornir = "^3.3.0"
nornir-jinja2 = "^0.2.0"
nornir-utils = "^0.2.0"
typer = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
cli = "nornir_example.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
